fix(docs): logo

--- a/webapp/tileset-analyzer-app/src/index.css
+++ b/webapp/tileset-analyzer-app/src/index.css
@@ -1,10 +1,11 @@
 .logo {
   float: left;
-  width: 120px;
-  height: 31px;
+  width: 150px;
+  height: 32px;
   margin: 16px 24px 16px 0;
-  background: rgba(255, 255, 255, 0.3);
+  object-fit:cover;
 }
+
 
 .ant-row-rtl .logo {
   float: right;
