--- a/webapp/tileset-analyzer-app/src/App.css
+++ b/webapp/tileset-analyzer-app/src/App.css
@@ -2,10 +2,19 @@
   text-align: center;
 }
 
+.App-title {
+  font-size: 16px;
+  text-transform: uppercase;
+  color: #fff;
+  margin-bottom: 0;
+}
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -32,6 +41,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
