--- a/webapp/tileset-analyzer-app/src/map.scss
+++ b/webapp/tileset-analyzer-app/src/map.scss
@@ -51,8 +51,17 @@
     font-size: 10px;
 }
 
+.maplibregl-popup-content {
+    border-radius: 10px;
+    box-shadow: 4px 1px 56px -8px rgba(0,0,0,0.75);
+    font-family: monospace;
+}
+
+
+
 .mbview_feature:not(:last-child) {
     border-bottom: 1px solid #ccc;
+    padding: 6px 2px;
 }
 
 .mbview_layer:before {
