--- a/webapp/tileset-analyzer-app/src/map.scss
+++ b/webapp/tileset-analyzer-app/src/map.scss
@@ -3,19 +3,6 @@
     height: 400px;
 }
 
-.sidebar {
-    background-color: rgba(35, 55, 75, 0.9);
-    color: #fff;
-    padding: 6px 12px;
-    font-family: monospace;
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 12px;
-    border-radius: 4px;
-}
-
 
 .map-wrap {
     position: relative;
@@ -34,15 +21,20 @@
     background-color: rgba(35, 55, 75, 0.9);
     color: #fff;
     padding: 6px 12px;
-    font-family: monospace;
     z-index: 1;
     position: absolute;
     top: 0;
     left: 0;
     margin: 12px;
     border-radius: 4px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 14px;
+    word-spacing: 5px;
 }
 
+.maplibregl-ctrl-attrib-inner {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
 
 /*popup*/
 .mbview-popup {
@@ -54,7 +46,7 @@
 .maplibregl-popup-content {
     border-radius: 10px;
     box-shadow: 4px 1px 56px -8px rgba(0,0,0,0.75);
-    font-family: monospace;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 
@@ -65,7 +57,7 @@
 }
 
 .mbview_layer:before {
-    content: '#';
+    content: '§ ';
 }
 
 .mbview_layer {
