fix(docs): ui fix

--- a/webapp/tileset-analyzer-app/src/map.scss
+++ b/webapp/tileset-analyzer-app/src/map.scss
@@ -36,6 +36,11 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+.select-metric {
+    width: 160px;
+}
+
+
 /*popup*/
 .mbview-popup {
     color: #333;
